--- a/OUT ESCOLA/Urna/index.html
+++ b/OUT ESCOLA/Urna/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urna</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <div class="urna">
+            <div class="tela">
+                <div class="tela2"></div>
+            </div>
+
+            <div class="botoes">
+                <div class="botoes-nmr">
+                    <button class="nmr 1">1</button>
+                    <button class="nmr 2">2</button>
+                    <button class="nmr 3">3</button>
+                    <button class="nmr 4">4</button>
+                    <button class="nmr 5">5</button>
+                    <button class="nmr 6">6</button>
+                    <button class="nmr 7">7</button>
+                    <button class="nmr 8">8</button>
+                    <button class="nmr 9">9</button>
+                    <button class="nmr 0">0</button>
+                </div>
     
+                <div class="botoes-confirma">
+                    <button class="botao branco">BRANCO</button>
+                    <button class="botao corrige">CORRIGE</button>
+                    <button class="botao confirma">CONFIRMA</button>
+                </div>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
