--- a/OUT ESCOLA/Vish/indexU.html
+++ b/OUT ESCOLA/Vish/indexU.html
@@ -3,18 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urna</title>
-    <link rel="stylesheet" href="style.css">
+    <title>INFOleições</title>
+    <link rel="stylesheet" href="urna.css">
+    <script src="json.js"></script>
 </head>
 <body>
     <main>
-        oiiiiiiiiiiiiiiiiiiiiiiii
         <div class="urna">
             <div class="tela">
                 <div class="tela2"></div>
             </div>
 
             <div class="botoes">
+                <div class="cabecalho">
+                    <div class="logo"><img src="../Vish/midias/logo cimol prata.png" alt="logo cimol" style="width: auto; height: 13vh;"></div>
+
+                    <p>JUSTIÇA CIMOLEITORAL</p>
+                </div>
+
                 <div class="botoes-nmr">
                     <button class="nmr 1">1</button>
                     <button class="nmr 2">2</button>
@@ -31,10 +37,9 @@
                 <div class="botoes-confirma">
                     <button class="botao branco">BRANCO</button>
                     <button class="botao corrige">CORRIGE</button>
-                    <button class="botao confirma">CONFIRMA</button>
+                    <button class="botao confirma" onclick="SomConfirma.play()">CONFIRMA</button>
                 </div>
             </div>
-            
         </div>
     </main>
 </body>
