--- a/lider.html
+++ b/lider.html
@@ -10,10 +10,10 @@
     <main>
         <div class="text"><h1>CANDIDATOS PARA LÍDER</h1></div>
         
-        <div class="candidatos">
-            <div class="candidato 1">
+        <div class="container-candidatos">
+            <div class="candidatos 1">
                 <div class="foto 1">
-                    <img src="/OUT ESCOLA/Vish/midias/logo cimol prata.png" alt="foto" style="width: 20vh;">
+                    <img src="/OUT ESCOLA/Vish/midias/Andriel.jpg" alt="foto" style="width: 25vh;">
                 </div>
                 <div class="text">
                     <h5>Andriel Ligeirinho</h5>
@@ -21,59 +21,61 @@
                 </div>
             </div>
 
-            <div class="candidato 2">
+            <div class="candidatos 2">
                 <div class="foto 2">
-                    <img src="" alt="">
+                    <img src="/OUT ESCOLA/Vish/midias/andre.png " alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
-                    <h5>Andriel Ligeirinho</h5>
-                    <p>1212</p>
+                    <h5>André Shuh Passeios</h5>
+                    <p>5141</p>
                 </div>
             </div>
 
-            <div class="candidato 3">
+            <div class="candidatos 3">
                 <div class="foto 3">
-                    <img src="" alt="">
+                    <img src="/OUT ESCOLA/Vish/midias/heitor.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
-                    <h5>Andriel Ligeirinho</h5>
-                    <p>1212</p>
+                    <h5>Heipac</h5>
+                    <p>2469</p>
                 </div>          
             </div>
 
-            <div class="candidato 4">
+            <div class="candidatos 4">
                 <div class="foto 4">
-                    <img src="" alt="">
+                    <img src="/OUT ESCOLA/Vish/midias/wellington.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
-                    <h5>Andriel Ligeirinho</h5>
-                    <p>1212</p>
+                    <h5>Wellington Bochechas</h5>
+                    <p>2344</p>
                 </div>   
             </div>
 
-            <div class="candidato 5">
+            <div class="candidatos 5">
                 <div class="foto 5">
-                    <img src="" alt="">
+                    <img src="/OUT ESCOLA/Vish/midias/pietro.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
-                    <h5>Andriel Ligeirinho</h5>
-                    <p>1212</p>
+                    <h5>Pagé Tabajara</h5>
+                    <p>3141</p>
                 </div>
             </div>
 
-            <div class="candidato 6">
+            <div class="candidatos 6">
                 <div class="foto 6">
-                    <img src="" alt="">
+                    <img src="/OUT ESCOLA/Vish/midias/Vitor.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
-                    <h5>Andriel Ligeirinho</h5>
-                    <p>1212</p>
+                    <h5>Vitor Alemon Potato</h5>
+                    <p>1945</p>
                 </div>
             </div>
         </div>
 
         <div class="baixo">
-            <button class="botao">CONTINUAR</button>
+            <a href="urna.html">
+                <button class="botao">CONTINUAR</button>
+            </a>
         </div>
     </main>
 </body>
