--- a/T-inicial.html
+++ b/T-inicial.html
@@ -15,15 +15,16 @@
         <div class="container">
             <div class="textos">
                 <h1>BEM-VINDO!</h1>
-                <p id="text">O INFOleições é um site focado diretamente em votações, tendo como objetivo a escolha do líder e regente da turma 62 1 do curso de informática.</p>
+                <p id="text">O INFOleições é um site focado diretamente em votações, tendo como objetivo a escolha do líder da turma 62 1 do curso de informática.</p>
                 <p id="line">__________________________________________________________________________________________________________________________________________________________________________</p>
             </div>
   
 
-            <div class="baixo">
-                <h2>ESCOLHA UMA CATEGORIA:</h2>
-                <button class="botao">REGENTE</button>
-                <button class="botao">LÍDER</button>
+            <div class="baixo"> 
+                <h2>VAMOS COMEÇAR?</h2>
+                <a href="lider.html">
+                    <button class="botao">AVANÇAR</button>
+                </a>
             </div>
         </div>
     </main>
