--- a/lider.html
+++ b/lider.html
@@ -19,6 +19,10 @@
                     <h5>Andriel Ligeirinho</h5>
                     <p>1212</p>
                 </div>
+                <div class="vice">
+                    <h5>Vice: <br>Rafaustão</h5>
+                    <img src="/OUT ESCOLA/Vish/midias/rafaustao.png" alt="foto" style="width: 7vh;">
+                </div>
             </div>
 
             <div class="candidatos 2">
@@ -29,6 +33,10 @@
                     <h5>André Shuh Passeios</h5>
                     <p>5141</p>
                 </div>
+                <div class="vice">
+                    <h5>Vice: Leite <br>na boca</h5>
+                    <img src="/OUT ESCOLA/Vish/midias/leite.jpg" alt="foto" style="width: 7vh;">
+                </div>
             </div>
 
             <div class="candidatos 3">
@@ -38,7 +46,11 @@
                 <div class="text">
                     <h5>Heipac</h5>
                     <p>2469</p>
-                </div>          
+                </div> 
+                <div class="vice">
+                    <h5>Vice: Davi <br>Bizkit</h5>
+                    <img src="/OUT ESCOLA/Vish/midias/dd.png" alt="foto" style="width: 7vh;">
+                </div>         
             </div>
 
             <div class="candidatos 4">
@@ -48,6 +60,10 @@
                 <div class="text">
                     <h5>Wellington Bochechas</h5>
                     <p>2344</p>
+                </div>   
+                <div class="vice">
+                    <h5>Vice: Sapo <br>Paulo</h5>
+                    <img src="/OUT ESCOLA/Vish/midias/paulo.jpg" alt="foto" style="width: 7vh;">
                 </div>   
             </div>
 
@@ -59,6 +75,10 @@
                     <h5>Pagé Tabajara</h5>
                     <p>3141</p>
                 </div>
+                <div class="vice">
+                    <h5>Vice: <br>O Ganado</h5>
+                    <img src="/OUT ESCOLA/Vish/midias/otavio.png" alt="foto" style="width: 7vh;">
+                </div>   
             </div>
 
             <div class="candidatos 6">
@@ -69,6 +89,10 @@
                     <h5>Vitor Alemon Potato</h5>
                     <p>1945</p>
                 </div>
+                <div class="vice">
+                    <h5>Vice: <br>Argentino</h5>
+                    <img src="/OUT ESCOLA/Vish/midias/thomas.png" alt="foto" style="width: 7vh;">
+                </div>  
             </div>
         </div>
 
