--- a/OUT ESCOLA/TV/tv.html
+++ b/OUT ESCOLA/TV/tv.html
@@ -67,7 +67,7 @@
         </div>
     </div>
     <div class="text_404">
-        <div class="text_4041">YUN LI</div>
+        <div class="text_4041"><span>YUN LI</span></div>
     </div>
     </div>
 </body>
