adição inicial de js e mudança no design

--- a/OUT ESCOLA/Vish/lider.html
+++ b/OUT ESCOLA/Vish/lider.html
@@ -34,7 +34,7 @@
                     <p>5141</p>
                 </div>
                 <div class="vice">
-                    <h5>Vice: Leite <br>na boca</h5>
+                    <h5>Vice: Leite</h5>
                     <img src="/OUT ESCOLA/Vish/midias/leite.jpg" alt="foto" style="width: 7vh;">
                 </div>
             </div>
