--- a/OUT ESCOLA/Vish/urna.html
+++ b/OUT ESCOLA/Vish/urna.html
@@ -5,43 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
     <link rel="stylesheet" href="urna.css">
-    <script src="urna.js"></script>
+    <script src="urna.js" defer></script> <!-- Carrega o script após o HTML -->
 </head>
 <body>
     <main>
         <div class="urna">
             <div class="tela">
-                <div class="tela2"></div>
+                <div class="tela2">
+                    <textarea class="textarea"></textarea>
+                    <div id="mensagem"></div> <!-- Div para exibir a mensagem -->
+                </div>
             </div>
 
             <div class="botoes">
                 <div class="cabecalho">
                     <div class="logo"><img src="/OUT ESCOLA/Vish/midias/logo cimol prata.png" alt="logo cimol" style="width: auto; height: 13vh;"></div>
-
                     <p>JUSTIÇA CIMOLEITORAL</p>
                 </div>
 
                 <div class="botoes-nmr">
-                    <button class="nmr 1" onclick="ClickSom.play()">1</button>
-                    <button class="nmr 2" onclick="ClickSom.play()">2</button>
-                    <button class="nmr 3" onclick="ClickSom.play()">3</button>
-                    <button class="nmr 4" onclick="ClickSom.play()">4</button>
-                    <button class="nmr 5" onclick="ClickSom.play()">5</button>
-                    <button class="nmr 6" onclick="ClickSom.play()">6</button>
-                    <button class="nmr 7" onclick="ClickSom.play()">7</button>
-                    <button class="nmr 8" onclick="ClickSom.play()">8</button>
-                    <button class="nmr 9" onclick="ClickSom.play()">9</button>
-                    <button class="nmr 0" onclick="ClickSom.play()">0</button>
+                    <button class="nmr">1</button>
+                    <button class="nmr">2</button>
+                    <button class="nmr">3</button>
+                    <button class="nmr">4</button>
+                    <button class="nmr">5</button>
+                    <button class="nmr">6</button>
+                    <button class="nmr">7</button>
+                    <button class="nmr">8</button>
+                    <button class="nmr">9</button>
+                    <button class="nmr">0</button>
                 </div>
-    
+
                 <div class="botoes-confirma">
-                    <button class="botao branco" onclick="ClickSom.play()">BRANCO</button>
-
-                    <a href="urna.html"><button class="botao corrige" onclick="ClickSom.play()">CORRIGE</button></a>
-
-                    <button class="botao confirma" onclick="SomConfirma.play()">CONFIRMA</button>
+                    <button class="botao branco">BRANCO</button>
+                    <button class="botao corrige">CORRIGE</button>
+                    <button class="botao confirma" onclick="confirmarVoto()">CONFIRMA</button>
                 </div>
             </div>
+        </div>
+        
+        <div class="avancar">
+            <a href="votos.html">
+                <button class="botao">IR PARA OS RESULTADOS</button>
+            </a>
         </div>
     </main>
 </body>
