ultimo commit (espero)

--- a/OUT ESCOLA/Vish/T-inicial.html
+++ b/OUT ESCOLA/Vish/T-inicial.html
@@ -17,14 +17,17 @@
                 <h1>BEM-VINDO!</h1>
                 <p id="text">O INFOleições é um site focado diretamente em votações, tendo como objetivo a escolha do líder da turma 62 1 do curso de informática.</p>
                 <p id="line">__________________________________________________________________________________________________________________________________________________________________________</p>
+
             </div>
-  
 
             <div class="baixo"> 
                 <h2>VAMOS COMEÇAR?</h2>
                 <a href="lider.html">
-                    <button class="botao">AVANÇAR</button>
+                    <button class="botao">INICIAR VOTAÇÃO</button>
                 </a>
+
+                </a>
+                <a href="info.html" class="info"><p>Informações adicionais</p></a>
             </div>
         </div>
     </main>
