--- a/OUT ESCOLA/Vish/lider.html
+++ b/OUT ESCOLA/Vish/lider.html
@@ -30,7 +30,7 @@
                     <img src="/OUT ESCOLA/Vish/midias/andre.png " alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
-                    <h5>André Shuh Passeios</h5>
+                    <h5>André Schuh Passeios</h5>
                     <p>5141</p>
                 </div>
                 <div class="vice">
@@ -97,7 +97,7 @@
         </div>
 
         <div class="baixo">
-            <a href="urna.html">
+            <a href="regente.html">
                 <button class="botao">CONTINUAR</button>
             </a>
         </div>
