--- a/OUT ESCOLA/Vish/urna.html
+++ b/OUT ESCOLA/Vish/urna.html
@@ -48,6 +48,9 @@
             <a href="votos.html">
                 <button class="botao">IR PARA OS RESULTADOS</button>
             </a>
+            <a href="T-inicial.html">
+                <button class="botao">VOLTAR PARA O INÍCIO</button>
+            </a>
         </div>
     </main>
 </body>
