--- a/OUT ESCOLA/Vish/votos.html
+++ b/OUT ESCOLA/Vish/votos.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados da Votação</title>
+    <title>INFOleições</title>
     <link rel="stylesheet" href="votos.css">
     <script src="votos.js" defer></script>
 </head>
 <body>
     <main>
-        <h1>RESULTADO DA VOTAÇÃO</h1>
+        <h1>RESULTADO DA VOTAÇÃO</h1> <br>
         <div id="resultados">
+        </div>
+        <a>
+            <button class="reset">RESETAR VOTOS</button>
+        </a>
         </div>
         <a href="urna.html">
             <button class="botao">VOLTAR PARA A URNA</button>
