adição do media query (800)

--- a/OUT ESCOLA/Vish/T-inicial.html
+++ b/OUT ESCOLA/Vish/T-inicial.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="bloco">
-            <video src="/OUT ESCOLA/Vish/midias/BAND ELEIÇÕES： TRILHA OFICIAL 2022.mp4" style="width: 99vw;" autoplay loop muted></video>
+            <video src="/OUT ESCOLA/Vish/midias/BAND ELEIÇÕES： TRILHA OFICIAL 2022.mp4" autoplay loop muted></video>
         </div>
 
         <div class="container">
