--- a/OUT ESCOLA/Vish/urna.html
+++ b/OUT ESCOLA/Vish/urna.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
     <link rel="stylesheet" href="urna.css">
-    <script src="urna.js" defer></script> <!-- Carrega o script após o HTML -->
+    <script src="urna.js" defer></script> <!-- "defer" carrega o script dps do html/css -->
 </head>
 <body>
     <main>
@@ -13,7 +13,7 @@
             <div class="tela">
                 <div class="tela2">
                     <textarea class="textarea"></textarea>
-                    <div id="mensagem"></div> <!-- Div para exibir a mensagem -->
+                    <div id="mensagem"></div>
                 </div>
             </div>
 
@@ -44,14 +44,17 @@
             </div>
         </div>
         
-        <div class="avancar">
-            <a href="votos.html">
-                <button class="botao">IR PARA OS RESULTADOS</button>
-            </a>
-            <a href="T-inicial.html">
-                <button class="botao">VOLTAR PARA O INÍCIO</button>
-            </a>
+        <div class="baixo2">
+            <div class="avancar">
+                <a href="votos.html">
+                    <button class="botao">IR PARA OS RESULTADOS</button>
+                </a>
+                <a href="T-inicial.html">
+                    <button class="botao">VOLTAR PARA O INÍCIO</button>
+                </a>
+            </div>
         </div>
+       
     </main>
 </body>
 </html>
