--- a/OUT ESCOLA/Vish/urna.html
+++ b/OUT ESCOLA/Vish/urna.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="botoes-confirma">
-                    <button class="botao branco">BRANCO</button>
+                    <button class="botao branco" onclick="emBranco()">BRANCO</button>
                     <button class="botao corrige">CORRIGE</button>
                     <button class="botao confirma" onclick="confirmarVoto()">CONFIRMA</button>
                 </div>
