ultimas correções e adição de um icone

--- a/OUT ESCOLA/Vish/regente.html
+++ b/OUT ESCOLA/Vish/regente.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
-    <link rel="stylesheet" href="lider.css">
+    <link rel="shortcut icon" href="midias/cimol icon .png" type="image/x-icon">
+    <link rel="stylesheet" href="regente.css">
 </head>
 <body>
     <main>
@@ -13,7 +14,7 @@
         <div class="container-candidatos">
             <div class="candidatos 1">
                 <div class="foto 1">
-                    <img src="/OUT ESCOLA/Vish/midias/helder.png" alt="foto" style="width: 20vh;">
+                    <img src="midias/helder.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
                     <h5>Helder</h5>
@@ -23,7 +24,7 @@
 
             <div class="candidatos 2">
                 <div class="foto 2">
-                    <img src="/OUT ESCOLA/Vish/midias/candido.png" alt="foto" style="width: 20vh;">
+                    <img src="midias/candido.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
                     <h5>Cândido</h5>
@@ -33,7 +34,7 @@
 
             <div class="candidatos 3">
                 <div class="foto 3">
-                    <img src="/OUT ESCOLA/Vish/midias/joga.png" alt="foto" style="width: 20vh;">
+                    <img src="midias/joga.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
                     <h5>Cabral Joga</h5>
@@ -43,7 +44,7 @@
 
             <div class="candidatos 4">
                 <div class="foto 4">
-                    <img src="/OUT ESCOLA/Vish/midias/king.png" alt="foto" style="width: 20vh;">
+                    <img src="midias/king.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
                     <h5>Kingnaldo</h5>
@@ -53,7 +54,7 @@
 
             <div class="candidatos 5">
                 <div class="foto 5">
-                    <img src="/OUT ESCOLA/Vish/midias/mago.png" alt="foto" style="width: 20vh;">
+                    <img src="midias/mago.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
                     <h5>Mago Davy Jones</h5>
@@ -63,7 +64,7 @@
 
             <div class="candidatos 6">
                 <div class="foto 6">
-                    <img src="/OUT ESCOLA/Vish/midias/renato.png" alt="foto" style="width: 20vh;">
+                    <img src="midias/renato.png" alt="foto" style="width: 20vh;">
                 </div>
                 <div class="text">
                     <h5>Painato</h5>
