--- a/OUT ESCOLA/Vish/urna.html
+++ b/OUT ESCOLA/Vish/urna.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
+    <link rel="shortcut icon" href="midias/cimol icon .png" type="image/x-icon">
     <link rel="stylesheet" href="urna.css">
-    <script src="urna.js" defer></script> <!-- "defer" carrega o script dps do html/css -->
+    <script src="urna.js" defer></script> <!-- "defer" carrega o js dps do html/css -->
 </head>
 <body>
     <main>
@@ -19,7 +20,7 @@
 
             <div class="botoes">
                 <div class="cabecalho">
-                    <div class="logo"><img src="/OUT ESCOLA/Vish/midias/logo cimol prata.png" alt="logo cimol" style="width: auto; height: 13vh;"></div>
+                    <div class="logo"><img class="imagem-logo" src="midias/logo cimol prata.png" alt="logo cimol"></div>
                     <p>JUSTIÇA CIMOLEITORAL</p>
                 </div>
 
@@ -37,7 +38,7 @@
                 </div>
 
                 <div class="botoes-confirma">
-                    <button class="botao branco" onclick="emBranco()">BRANCO</button>
+                    <button class="botao branco">BRANCO</button>
                     <button class="botao corrige">CORRIGE</button>
                     <button class="botao confirma" onclick="confirmarVoto()">CONFIRMA</button>
                 </div>
