--- a/OUT ESCOLA/Vish/T-inicial.html
+++ b/OUT ESCOLA/Vish/T-inicial.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
+    <link rel="shortcut icon" href="midias/cimol icon .png" type="image/x-icon">
     <link rel="stylesheet" href="T-inicial.css">
 </head>
 <body>
     <main>
         <div class="bloco">
-            <video src="/OUT ESCOLA/Vish/midias/BAND ELEIÇÕES： TRILHA OFICIAL 2022.mp4" autoplay loop muted></video>
+            <video src="midias/BAND ELEIÇÕES： TRILHA OFICIAL 2022.mp4" autoplay loop muted></video>
         </div>
 
         <div class="container">
             <div class="textos">
                 <h1>BEM-VINDO!</h1>
-                <p id="text">O INFOleições é um site focado diretamente em votações, tendo como objetivo a escolha do líder da turma 62 1 do curso de informática.</p>
-                <p id="line">__________________________________________________________________________________________________________________________________________________________________________</p>
+                <p id="text">O INFOleições é um site focado diretamente em votações, tendo como objetivo a escolha do líder e regente da turma 62 1 do curso de informática.</p>
+                <hr id="line">
 
             </div>
 
