--- a/OUT ESCOLA/Vish/lider.html
+++ b/OUT ESCOLA/Vish/lider.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
+    <link rel="shortcut icon" href="midias/cimol icon .png" type="image/x-icon">
     <link rel="stylesheet" href="lider.css">
 </head>
 <body>
@@ -11,9 +12,10 @@
         <div class="text"><h1>CANDIDATOS PARA LÍDER</h1></div>
         
         <div class="container-candidatos">
+            
             <div class="candidatos 1">
                 <div class="foto 1">
-                    <img src="/OUT ESCOLA/Vish/midias/Andriel.jpg" alt="foto" style="width: 25vh;">
+                    <img class="outro-foto" src="midias/Andriel.jpg" alt="foto">
                 </div>
                 <div class="text">
                     <h5>Andriel Ligeirinho</h5>
@@ -21,13 +23,13 @@
                 </div>
                 <div class="vice">
                     <h5>Vice: <br>Rafaustão</h5>
-                    <img src="/OUT ESCOLA/Vish/midias/rafaustao.png" alt="foto" style="width: 7vh;">
+                    <img src="midias/rafaustao.png" alt="foto" style="width: 5vh; height: auto;">
                 </div>
             </div>
 
             <div class="candidatos 2">
                 <div class="foto 2">
-                    <img src="/OUT ESCOLA/Vish/midias/andre.png " alt="foto" style="width: 20vh;">
+                    <img class="outro-foto" src="midias/andre.png " alt="foto">
                 </div>
                 <div class="text">
                     <h5>André Schuh Passeios</h5>
@@ -35,13 +37,13 @@
                 </div>
                 <div class="vice">
                     <h5>Vice: Leite</h5>
-                    <img src="/OUT ESCOLA/Vish/midias/leite.jpg" alt="foto" style="width: 7vh;">
+                    <img src="midias/leite.jpg" alt="foto" style="width: 5vh; height: 5vh;">
                 </div>
             </div>
 
             <div class="candidatos 3">
                 <div class="foto 3">
-                    <img src="/OUT ESCOLA/Vish/midias/heitor.png" alt="foto" style="width: 20vh;">
+                    <img class="outro-foto" src="midias/heitor.png" alt="foto">
                 </div>
                 <div class="text">
                     <h5>Heipac</h5>
@@ -49,13 +51,13 @@
                 </div> 
                 <div class="vice">
                     <h5>Vice: Davi <br>Bizkit</h5>
-                    <img src="/OUT ESCOLA/Vish/midias/dd.png" alt="foto" style="width: 7vh;">
+                    <img src="midias/dd.png" alt="foto" style="width: 5vh; height: auto;">
                 </div>         
             </div>
 
             <div class="candidatos 4">
                 <div class="foto 4">
-                    <img src="/OUT ESCOLA/Vish/midias/wellington.png" alt="foto" style="width: 20vh;">
+                    <img class="outro-foto" src="midias/wellington.png" alt="foto">
                 </div>
                 <div class="text">
                     <h5>Wellington Bochechas</h5>
@@ -63,13 +65,13 @@
                 </div>   
                 <div class="vice">
                     <h5>Vice: Sapo <br>Paulo</h5>
-                    <img src="/OUT ESCOLA/Vish/midias/paulo.jpg" alt="foto" style="width: 7vh;">
+                    <img src="midias/paulo.jpg" alt="foto" style="width: 5vh; height: auto;">
                 </div>   
             </div>
 
             <div class="candidatos 5">
                 <div class="foto 5">
-                    <img src="/OUT ESCOLA/Vish/midias/pietro.png" alt="foto" style="width: 20vh;">
+                    <img class="outro-foto" src="midias/pietro.png" alt="foto">
                 </div>
                 <div class="text">
                     <h5>Pagé Tabajara</h5>
@@ -77,13 +79,13 @@
                 </div>
                 <div class="vice">
                     <h5>Vice: <br>O Ganado</h5>
-                    <img src="/OUT ESCOLA/Vish/midias/otavio.png" alt="foto" style="width: 7vh;">
+                    <img src="midias/otavio.png" alt="foto" style="width: 5vh; height: auto;">
                 </div>   
             </div>
 
             <div class="candidatos 6">
                 <div class="foto 6">
-                    <img src="/OUT ESCOLA/Vish/midias/Vitor.png" alt="foto" style="width: 20vh;">
+                    <img class="outro-foto" src="midias/Vitor.png" alt="foto">
                 </div>
                 <div class="text">
                     <h5>Vitor Alemon Potato</h5>
@@ -91,7 +93,7 @@
                 </div>
                 <div class="vice">
                     <h5>Vice: <br>Argentino</h5>
-                    <img src="/OUT ESCOLA/Vish/midias/thomas.png" alt="foto" style="width: 7vh;">
+                    <img src="midias/thomas.png" alt="foto" style="width: 5vh; height: auto;">
                 </div>  
             </div>
         </div>
