--- a/OUT ESCOLA/Vish/votos.html
+++ b/OUT ESCOLA/Vish/votos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFOleições</title>
+    <link rel="shortcut icon" href="midias/cimol icon .png" type="image/x-icon">
     <link rel="stylesheet" href="votos.css">
     <script src="votos.js" defer></script>
 </head>
